# paper-2024-yarlungzangbo-wrf-streamflow

./: .gitattributes  .gitignore  AGENTS.md  justfile  latexindent.yaml  main.tex  pyproject.toml  references.bib  requirements.txt  si.tex
data/: coastline.geojsonl  gauge_q_loc.csv  grid_definition.txt  rivnet.parquet  rivnet_weight_domain.parquet  rivnet_weight_experiment.parquet  wrf_domain.nc  wrf_mask.nc  yj_boundary.geojson
fig/: workflow.pptx
scripts/: append_land_snow.py  calibration.py  create_lateralflow.py  create_mask_subset.ipynb  create_mrro.py  extract_surface_vars.py  gauge_network.py  gpm_check.py  gpm_convert_tonc.py  lateralflow_create.py  plot_calibration.py  plot_domain.py  plot_griddeddata.py  plot_relationship.py  plot_streamflow.py  river_network_create.py  routing.py  routing_common.py  routing_ensemble.py  routing_ensemble_generate.py  show_domain.ipynb  snow_convert_tonc.py  snow_interpolation.py  snow_mask.py  surface_vars_extract.py  surface_vars_merge.py  wrfout_collect.py  wrfout_mask_basin.py  wrfout_mask_gauge.py
